fix: /stats page layout on mobile

--- a/www/assets/css/theme.css
+++ b/www/assets/css/theme.css
@@ -219,7 +219,7 @@ figure img {
   max-width: 100%;
 }
 
-img {
+img, stats-canvas {
   max-width: 100%;
 }
 
